--- a/Pamper-Front/index.html
+++ b/Pamper-Front/index.html
@@ -11,6 +11,7 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 <style>
+    //取消内外间距 =-=
     *{
         padding: 0px;
         margin: 0px;
